EventRelay/force-app/main/default/objects/Order__c/validationRules/Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Not_Negative</fullName>
    <active>true</active>
    <description>Order amount cannot be negative.</description>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount cannot be negative.</errorMessage>
</ValidationRule>